# Global-Illumination

./: README.md
final/src/: AreaLight.h  CMakeCache.txt  Camera.cc  Camera.h  Group.cc  LambertianMaterial.cc  LambertianMaterial.h  Makefile  Material.cc  Material.h  Object.cc  Object.h  Parser.cc  Parser.h  PinholeCamera.cc  Plane.h  PointLight.cc  PointLight.h  Scene.cc  Scene.h  SpecularMaterial.cc  SpecularMaterial.h  Sphere.cc  cmake_install.cmake  specter  specter.cc  test.scn
project1/: README.md  image.ppm  test.scn
project1/src/: CMakeCache.txt  CMakeLists.txt  Image.h  Makefile  Parser.cc  Parser.h  Primitive.cc  Primitive.h  Scene.cc  Scene.h  Triangle.cc  Triangle.h  cmake_install.cmake  specter.cc
project2/: README.md  all_three_effects.ppm  anti_aliasing.ppm  anti_aliasing_and_depth_of_field.ppm  anti_aliasing_and_motion_blur.ppm  depth_of_field.ppm  depth_of_field_and_motion_blur.ppm  motion_blur.ppm  no_effects.ppm  test.scn
project2/src/: CMakeCache.txt  CMakeLists.txt  LambertianMaterial.cc  Makefile  Parser.cc  PinholeCamera.h  Primitive.h  RenderContext.h  Scene.cc  Sphere.h  Vector.h  cmake_install.cmake  specter  specter.cc  test.scn
project3/: README.md  sample1.ppm  sample2.ppm  sample3.ppm  sample4.ppm  sample5.ppm
project3/src/: AreaLight.cc  AreaLight.h  Color.h  Group.h  Image.cc  LambertianMaterial.cc  Parser.cc  Parser.h  Plane.cc  Primitive.cc  Scene.cc  Scene.h  SpecularMaterial.cc  SpecularMaterial.h  Time.cc  Triangle.cc  Triangle.h  test.scn
